[tool.poetry]
name = "rqle-ai-langchain-util"
version = "0.1.0"
description = "Library facilitating the integration of different LLM providers in LangChain (e.g. `ollama`)."
license = "Apache-2.0"
authors = ["Quentin Reul <Quentin.H.Reul@gmail.com>"]
readme = "README.md"
homepage = "https://www.linkedin.com/company/102641077"
keywords = ["langchain", "generative ai", "llm"]

[tool.poetry.dependencies]
boto3 = "^1.34"
huggingface-hub = "^0.21"
langchain = "^0.1"
llm-guard = "^0.3"
python = ">=3.11,<3.12"
python-dotenv = "^1"
streamlit = "^1.31"
traceloop-sdk = "^0.13"
transformers = "^4.36"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
